fix: fix block align and focus color

--- a/style.scss
+++ b/style.scss
@@ -6,27 +6,35 @@ $fontStyle: 'Quicksand', sans-serif;
 * {
   margin: 0;
   padding: 0;
+  text-align: center;
+  color: $fontColor;
+  font-family: $fontStyle;
+}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 .wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
-span {
-  color: $fontColor;
-  font-family: $fontStyle;
-}
-.greeting, #my-name {
+h1 {
   font-size: 2em;
   font-weight: bold;
+  margin-bottom: 30px;
 }
-.focus, #my-focus {
+.focus, .my-focus {
   font-size: 1.5em;
   font-weight: bold;
+  color: darken($fontColor, 40%);
 }
 #time {
-  color: $fontColor;
-  font-family: $fontStyle;
   font-size: 8rem;
 }
 .morning {
